--- a/src/templates/handlebars/posts-by-tag.handlebars
+++ b/src/templates/handlebars/posts-by-tag.handlebars
@@ -7,34 +7,48 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{htmlWebpackPlugin.options.title}}</title>
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 </head>
 
-<body>
+<body class="posts-by-tag">
     <header>
 
     </header>
 
-    <ul class="tag-list">
-        {{> tags}}
-    </ul>
+    <nav class="tags-wrapper tags-wrapper--top">
 
-    <div class="wrapper">
-        <div class="container">
+    </nav>
 
-            <!-- START: Display list of Posts -->
-            {{#if htmlWebpackPlugin.options.posts}}
-            <ul>
-                {{#each htmlWebpackPlugin.options.posts}}
-                <li><a href="/dist/pages{{path}}.md.html">{{title}}</a></li>
-                {{/each}}
-            </ul>
-            {{/if}}
-            <!-- END: Display list of Posts -->
+    <main class="wrapper">
+        <div class="container-fluid">
+
+            <section class="post-list__wrapper">
+
+                <!-- START: Display list of Posts -->
+                {{#if htmlWebpackPlugin.options.posts}}
+                <ul class="post-list">
+                    {{#each htmlWebpackPlugin.options.posts}}
+                    <li class="post-list__item">
+                        {{#if coverImage}}
+                        <div class="post-list__cover-image">
+                            <img src="/dist{{coverImage}}" />
+                        </div>
+                        {{/if}}
+                        <div class="post-list__content">
+                            <em>{{category}}</em>
+                            <h2 class="post-list__title"><a href="/dist/pages{{path}}.md.html">{{title}}</a></h2>
+                            <p class="post-list__excerpt">{{excerpt}}</p>
+                        </div>
+
+                    </li>
+                    {{/each}}
+                </ul>
+                {{/if}}
+                <!-- END: Display list of Posts -->
+
+            </section>
+
         </div>
-    </div>
+    </main>
 
     {{{htmlWebpackPlugin.options.footer}}}
 
