--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,15 +1,146 @@
 @import './bootstrap.min.css';
 @import './_variables';
 
-$bluegrey: #2b3a42;
 
-pre {
-	padding: 8px 16px;
-	background: $bluegrey;
-	color: $redColor;
-	font-family: Menlo, Courier, monospace;
-	font-size: 13px;
-	line-height: 1.5;
-	text-shadow: 0 1px 0 rgba(23, 31, 35, 0.5);
-	border-radius: 3px;
+/* = Header Main
+=============================================*/
+.header-main {
+
+}
+.header-title {
+	text-align: center;
+	padding: 1em;
+}
+.header-title a {
+	font-size: 1.5em;
+	color: #000;
+}
+
+.container-fluid {
+	display: flex;
+	margin: 0;
+	padding: 0;
+}
+
+/* = Tag List
+=============================================*/
+.tags-wrapper--top {
+	background-color: #5f27cd;
+}
+.tags-wrapper--aside {
+	flex-basis: 20%;
+	background-color: #5f27cd;
+}
+.tags-wrapper--aside .tag-list {
+	flex-flow: column wrap
+}
+
+.tag-list {
+	list-style-type: none;
+	margin:0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	color: #FFF;
+}
+.tag-list__item {
+	display: block;
+}
+.tag-list__item a {
+	display: block;
+	padding: 1em;
+	color: #FFF;
+}
+.tag-list__item a:hover,
+.tag-list__item a:focus {
+	background-color: #341f97;
+	color: #FFF;
+}
+
+
+/* = Category List
+=============================================*/
+.category-list {
+	list-style-type: none;
+	margin:4px 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+}
+
+.category-list a {
+	display: block;
+	padding: 4px 20px;
+	margin: 0 4px;
+}
+
+.category-list a:hover,
+.category-list a:focus {
+	background-color: #EEE;
+	border-radius: 100px;
+	text-decoration: none;
+}
+
+
+/* = Post List
+=============================================*/
+.posts-by-tag .post-list__wrapper {
+	flex-basis: auto;
+}
+.post-list__wrapper {
+	flex-basis: 80%;
+	padding: 2em;
+	background-color: #f4f4f4;
+}
+.post-list {
+	list-style-type: none;
+	margin:0;
+	padding: 0;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+}
+.post-list__item {
+	border: 1px solid #ddd;
+	flex-grow: 1;
+	flex-basis: 29.33%;
+	margin: 2%;
+	background-color: #FFF;
+}
+.post-list__item:hover {
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, .14), 0 6px 30px 5px rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .2);
+}
+
+.post-list__cover-image {
+	height: 150px;
+	overflow: hidden;
+	background-color: #576574;
+}
+.post-list__cover-image img {
+	max-width: 100%;
+}
+.post-list__content {
+	padding: 1em 2em;
+}
+.post-list__title a {
+	display: block;
+	color: #000
+}
+.post-list__excerpt {
+	color: #999;
+}
+
+
+/* = Single Article View
+=============================================*/
+.article__header {
+	padding: 1.5em 0;
+}
+.article__content {
+	padding: 2em 0;
+}
+.footer-main {
+	text-align: center;
+	padding: 1em;
+	background-color: #c8d6e5;
 }
