--- a/src/templates/handlebars/header.handlebars
+++ b/src/templates/handlebars/header.handlebars
@@ -1,6 +1,6 @@
 <!-- START : Header -->
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal"><a href="/">Handlebar Template Header</a></h5>
-    {{> categories}} {{!-- {{> tags}} --}}
+<div class="header-main">
+    <h5 class="header-title"><a href="/">Main Header</a></h5>
+    {{> categories}}
 </div>
 <!-- END : Header -->
