Code refactoring + UI Improvements + Added Fonts

--- a/src/templates/handlebars/header.handlebars
+++ b/src/templates/handlebars/header.handlebars
@@ -1,6 +1,11 @@
 <!-- START : Header -->
 <div class="header-main">
     <h5 class="header-title"><a href="/">Main Header</a></h5>
-    {{> categories}}
+    <ul class="main-navigation">
+        <li><a href="/">Our Work</a></li>
+        <li><a href="/">Blog</a></li>
+        <li><a href="/">About Us</a></li>
+        <li><a href="/">Contact Us</a></li>
+    </ul>
 </div>
 <!-- END : Header -->
