--- a/src/templates/handlebars/index.handlebars
+++ b/src/templates/handlebars/index.handlebars
@@ -14,9 +14,9 @@
 
     </header>
 
-    <nav class="tags-wrapper tags-wrapper--top">
+    {{!-- <nav class="tags-wrapper tags-wrapper--top">
 
-    </nav>
+    </nav> --}}
 
     {{!-- {{{htmlWebpackPlugin.options.header}}} {{{htmlWebpackPlugin.options.categories}}} --}}
 
