--- a/src/templates/handlebars/posts-by-category.handlebars
+++ b/src/templates/handlebars/posts-by-category.handlebars
@@ -40,9 +40,10 @@
                         {{/if}}
                         <div class="post-list__content">
                             <em>{{category}}</em>
-                            <h2 class="post-list__title"><a href="/dist/pages/{{path}}.md.html">{{title}}</a></h2>
+                            <h2 class="post-list__title"><a href="/dist/pages{{path}}.md.html">{{title}} 888</a></h2>
                             <p class="post-list__excerpt">{{excerpt}}</p>
                         </div>
+
                     </li>
                     {{/each}}
                 </ul>
