--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,25 +1,82 @@
-@import './bootstrap.min.css';
-@import './_variables';
+body, td, th {
+	font-family: 'Open Sans'
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Roboto'
+}
+.container-fluid {
+	display: flex;
+	align-items: stretch;
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+}
 
 
 /* = Header Main
 =============================================*/
 .header-main {
-
+	display: flex;
+	justify-content: space-between;
+	align-items: stretch;
+	box-shadow: 0 18px 37px -7px rgba(39,60,77,.2);
+	position: relative;
+	padding: 8px;
 }
 .header-title {
+	margin: 0;
 	text-align: center;
-	padding: 1em;
+	font-family: 'Bebas';
+	font-weight: bold
 }
 .header-title a {
 	font-size: 1.5em;
-	color: #000;
+    color: #000;
+    display: block;
+    height: 100%;
+    line-height: 2em;
 }
-
-.container-fluid {
-	display: flex;
+.main-navigation {
+	list-style-type: none;
 	margin: 0;
 	padding: 0;
+}
+.main-navigation li {
+	float: left;
+	height: 100%;
+	line-height: 44px;
+}
+.main-navigation li a {
+	display: inline-block;
+	padding: 8px 0px;
+	text-transform: uppercase;
+	color: #000;
+	position: relative;
+	transition: transform .2s;
+	margin: 0 1em;
+	vertical-align: bottom;
+}
+.main-navigation li a:hover,
+.main-navigation li a:focus {
+	text-decoration: none;
+}
+.main-navigation li a::after {
+	content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom: 10px;
+    left: 0;
+    background-color: #5f27cd;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform .3s;
+}
+.main-navigation li a:hover::after,
+.main-navigation li a:focus::after,
+.main-navigation li a:active::after {
+    transform-origin: bottom left;
+    transform: scaleX(1);
 }
 
 /* = Tag List
@@ -84,9 +141,7 @@
 
 /* = Post List
 =============================================*/
-.posts-by-tag .post-list__wrapper {
-	flex-basis: auto;
-}
+
 .post-list__wrapper {
 	flex-basis: 80%;
 	padding: 2em;
@@ -101,7 +156,6 @@
 	justify-content: center;
 }
 .post-list__item {
-	border: 1px solid #ddd;
 	flex-grow: 1;
 	flex-basis: 29.33%;
 	margin: 2%;
@@ -123,6 +177,7 @@
 	padding: 1em 2em;
 }
 .post-list__title a {
+	font-size: 24px;
 	display: block;
 	color: #000
 }
@@ -143,4 +198,40 @@
 	text-align: center;
 	padding: 1em;
 	background-color: #c8d6e5;
+}
+
+img { display: block; margin: 0 auto; max-width: 100%; }
+
+pre {
+    margin: 2em auto;
+    width: 100%;
+    padding: 2em;
+    font-family: Inconsolata, Consolas, monospace, sans-serif;
+    font-size: 1em;
+	line-height: 1.5;
+    overflow: auto;
+    background: #F7FAFB;
+    border-radius: 3px;
+	position:relative;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
+pre code { background-color: transparent; padding: 0; display: block; border: 0px solid; }
+pre:after {
+	content: "<CODE>";
+	position: absolute;
+	top:0;
+	right: 0;
+	padding: 5px 15px;
+	background: #999;
+	color: #FFF;
+}
+code {
+	background-color: #EEE;
+    font-family: Consolas,monospace;
+    border: solid 1px #CCC;
+    padding: 0 8px;
+    border-radius: 3px;
+    display: inline-block;
+    font-size: 14px;
 }
