--- a/src/templates/handlebars/article.handlebars
+++ b/src/templates/handlebars/article.handlebars
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{htmlWebpackPlugin.options.title}}</title>
+    <script src="/dist/assets/js/highlight.pack.js"></script>
 </head>
 
 <body class="article-view">
