--- a/src/templates/handlebars/tags.handlebars
+++ b/src/templates/handlebars/tags.handlebars
@@ -3,8 +3,8 @@
 <ul class="tag-list">
     {{#each tags}}
     <li class="tag-list__item">
-        <a href="/dist/pages/{{this}}/index.html">
-            {{this}}
+        <a href="/dist/pages/{{@key}}/index.html">
+            {{@key}} {{this}}
         </a>
     </li>
     {{/each}}
