Updated code to run Webpack-dev server from Dist folder and updated all path's accordingly

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -2,28 +2,28 @@
 =============================================*/
 @font-face {
     font-family: 'Open Sans';
-    src: url('../fonts/OpenSans-Regular-webfont.woff') format('woff');
+    src: url('/assets/fonts/OpenSans-Regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Open Sans';
-    src: url('../fonts/OpenSans-Bold-webfont.woff') format('woff');
+    src: url('/assets/fonts/OpenSans-Bold-webfont.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Open Sans';
-    src: url('../fonts/OpenSans-Light-webfont.woff') format('woff');
+    src: url('/assets/fonts/OpenSans-Light-webfont.woff') format('woff');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Open Sans';
-    src: url('../fonts/OpenSans-Semibold-webfont.woff') format('woff');
+    src: url('/assets/fonts/OpenSans-Semibold-webfont.woff') format('woff');
     font-weight: 500;
     font-style: normal;
 }
@@ -33,19 +33,19 @@
 =============================================*/
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Medium-webfont.woff') format('woff');
+    src: url('/assets/fonts/Roboto-Medium-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Bold-webfont.woff') format('woff');
+    src: url('/assets/fonts/Roboto-Bold-webfont.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 @font-face {
     font-family: 'Roboto';
-    src: url('../fonts/Roboto-Regular-webfont.woff') format('woff');
+    src: url('/assets/fonts/Roboto-Regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -55,8 +55,8 @@
 =============================================*/
 @font-face {
     font-family: 'Bebas';
-    src: url('../fonts/bebasneue_bold-webfont.woff2') format('woff2'),
-         url('../fonts/bebasneue_bold-webfont.woff') format('woff');
+    src: url('/assets/fonts/bebasneue_bold-webfont.woff2') format('woff2'),
+         url('/assets/fonts/bebasneue_bold-webfont.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 
@@ -64,8 +64,8 @@
 
 @font-face {
     font-family: 'Bebas';
-    src: url('../fonts/bebasneue_light-webfont.woff2') format('woff2'),
-         url('../fonts/bebasneue_light-webfont.woff') format('woff');
+    src: url('/assets/fonts/bebasneue_light-webfont.woff2') format('woff2'),
+         url('/assets/fonts/bebasneue_light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -73,8 +73,8 @@
 
 @font-face {
     font-family: 'Bebas';
-    src: url('../fonts/bebasneue_regular-webfont.woff2') format('woff2'),
-         url('../fonts/bebasneue_regular-webfont.woff') format('woff');
+    src: url('/assets/fonts/bebasneue_regular-webfont.woff2') format('woff2'),
+         url('/assets/fonts/bebasneue_regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
