--- a/src/templates/handlebars/categories.handlebars
+++ b/src/templates/handlebars/categories.handlebars
@@ -3,7 +3,7 @@
 <ul class="category-list">
     {{#each categories}}
     <li class="category-list__item">
-        <a href="/dist/pages/{{this}}/index.html">
+        <a href="/pages/{{this}}/index.html">
             {{this}}
         </a>
     </li>
