--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -32,7 +32,6 @@ h1, h2, h3, h4, h5, h6 {
 .header-title a {
 	font-size: 1.5em;
     color: #000;
-    display: block;
     height: 100%;
     line-height: 2em;
 }
@@ -81,6 +80,12 @@ h1, h2, h3, h4, h5, h6 {
 
 /* = Tag List
 =============================================*/
+.tags-wrapper {
+	display: none;
+}
+.isIndexNavOpened .tags-wrapper {
+	display: block;
+}
 .tags-wrapper--top {
 	background-color: #5f27cd;
 }
@@ -113,7 +118,16 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: #341f97;
 	color: #FFF;
 }
-
+.post-counts {
+	background-color: #130749;
+    border-radius: 50px;
+    padding: 0px 10px;
+    font-size: 14px;
+    float: right;
+    text-align: center;
+    font-weight: bold;
+    box-shadow: 0 1px 1px rgba(255,255,255,0.5);
+}
 
 /* = Category List
 =============================================*/
@@ -141,9 +155,11 @@ h1, h2, h3, h4, h5, h6 {
 
 /* = Post List
 =============================================*/
-
-.post-list__wrapper {
+.isIndexNavOpened .post-list__wrapper {
 	flex-basis: 80%;
+}
+.post-list__wrapper {
+	flex-basis: auto;
 	padding: 2em;
 	background-color: #f4f4f4;
 }
@@ -188,6 +204,9 @@ h1, h2, h3, h4, h5, h6 {
 
 /* = Single Article View
 =============================================*/
+.article {
+	line-height: 1.8;
+}
 .article__header {
 	padding: 1.5em 0;
 }
@@ -200,18 +219,69 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: #c8d6e5;
 }
 
-img { display: block; margin: 0 auto; max-width: 100%; }
+/* Scroll to top functionality
+===================================================*/
+.scroll-top {
+    position: fixed;
+    right: 2%;
+    bottom: 5%;
+    padding: 15px;
+    display: inline-block;
+    color: #000;
+    background: #FFF;
+    border: 1px solid #CCC;
+    z-index: 2600;
+    font-size: 24px;
+    border-radius: 5px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.2s linear;
+    box-shadow: 0 18px 37px -7px rgba(39, 60, 77, 0.2);
+}
+.scroll-top:hover,
+.scroll-top:active,
+.scroll-top:focus {
+    color: #FFF !important;
+    text-decoration: none !important;
+    background: #2196F3;
+    border-color: #2196F3;
+}
 
+.scroll-top.isVisible {
+    visibility: visible;
+    opacity: 1;
+}
+
+#toggleSidebar {
+	font-size: 36px;
+	color: #000;
+	font-weight: 700;
+	text-decoration: none;
+	margin: 0 1em 0 0;
+}
+#toggleSidebar:hover,
+#toggleSidebar:focus {
+	text-decoration: none;
+}
+
+code {
+	background-color: #e6ebef;
+    font-family: Consolas,monospace;
+    padding: 0 8px;
+    border-radius: 4px;
+    display: inline-block;
+    font-size: 14px;
+}
 pre {
     margin: 2em auto;
     width: 100%;
     padding: 2em;
     font-family: Inconsolata, Consolas, monospace, sans-serif;
     font-size: 1em;
-	line-height: 1.5;
+	line-height: 2;
     overflow: auto;
-    background: #F7FAFB;
-    border-radius: 3px;
+    background: #e6ebef;
+    border-radius: 4px;
 	position:relative;
 	white-space: pre-wrap;
 	word-wrap: break-word;
@@ -226,12 +296,6 @@ pre:after {
 	background: #999;
 	color: #FFF;
 }
-code {
-	background-color: #EEE;
-    font-family: Consolas,monospace;
-    border: solid 1px #CCC;
-    padding: 0 8px;
-    border-radius: 3px;
-    display: inline-block;
-    font-size: 14px;
+.hljs {
+	background-color: transparent;
 }
