--- a/src/templates/handlebars/article.handlebars
+++ b/src/templates/handlebars/article.handlebars
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{htmlWebpackPlugin.options.title}}</title>
-    <script src="/dist/assets/js/highlight.pack.js"></script>
+    <script src="./assets/js/highlight.pack.js"></script>
 </head>
 
 <body class="article-view">
@@ -41,6 +41,12 @@
     </div>
 
     {{{htmlWebpackPlugin.options.footer}}}
+
+    <!--  Scroll to top -->
+    <a href="javascript:void(0);" id="scrollToTop" class="scroll-top">
+        <i class="icon-arrow-up">&#8593;</i>
+        <span class="sr-only">Scroll To Top</span>
+    </a>
 
 </body>
 
