--- a/src/templates/handlebars/header.handlebars
+++ b/src/templates/handlebars/header.handlebars
@@ -1,6 +1,9 @@
 <!-- START : Header -->
 <div class="header-main">
-    <h5 class="header-title"><a href="/">Main Header</a></h5>
+    <h5 class="header-title">
+        <a id="toggleSidebar" href="javascript:void(0);">&#9776;</a>
+        <a href="/">Main Header</a>
+    </h5>
     <ul class="main-navigation">
         <li><a href="/">Our Work</a></li>
         <li><a href="/">Blog</a></li>
