--- a/src/templates/handlebars/posts-by-tag.handlebars
+++ b/src/templates/handlebars/posts-by-tag.handlebars
@@ -9,7 +9,7 @@
     <title>{{htmlWebpackPlugin.options.title}}</title>
 </head>
 
-<body class="posts-by-tag">
+<body class="posts-by-tag isIndexNavOpened">
     <header>
 
     </header>
@@ -35,12 +35,12 @@
                     <li class="post-list__item">
                         {{#if coverImage}}
                         <div class="post-list__cover-image">
-                            <img src="/dist{{coverImage}}" />
+                            <img src="{{coverImage}}" />
                         </div>
                         {{/if}}
                         <div class="post-list__content">
                             <em>{{category}}</em>
-                            <h2 class="post-list__title"><a href="/dist/pages/{{path}}.md.html">{{title}}</a></h2>
+                            <h2 class="post-list__title"><a href="/pages/{{path}}.md.html">{{title}}</a></h2>
                             <p class="post-list__excerpt">{{excerpt}}</p>
                         </div>
                     </li>
