--- a/src/templates/handlebars/article.handlebars
+++ b/src/templates/handlebars/article.handlebars
@@ -10,7 +10,7 @@
     <script src="./assets/js/highlight.pack.js"></script>
 </head>
 
-<body class="article-view">
+<body class="article-view" data-category="{{htmlWebpackPlugin.options.post.category}}" data-category-color="{{htmlWebpackPlugin.options.post.categoryColor}}">
     <header>
 
     </header>
