--- a/src/templates/handlebars/index.handlebars
+++ b/src/templates/handlebars/index.handlebars
@@ -43,7 +43,7 @@
                         </div>
                         {{/if}}
                         <div class="post-list__content">
-                            <span class="post-list__category">{{category}}</em>
+                            <span class="post-list__category">{{category}}</span>
                             <h2 class="post-list__title"><a href="/pages/{{path}}.md.html">{{title}}</a></h2>
                             <p class="post-list__excerpt">{{excerpt}}</p>
                         </div>
