--- a/src/templates/handlebars/article.handlebars
+++ b/src/templates/handlebars/article.handlebars
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{htmlWebpackPlugin.options.title}}</title>
-    <script src="./assets/js/highlight.pack.js"></script>
+    <script src="/assets/js/highlight.pack.js"></script>
 </head>
 
 <body class="article-view" data-category="{{htmlWebpackPlugin.options.post.category}}" data-category-color="{{htmlWebpackPlugin.options.post.categoryColor}}">
